# ya-dual-pane

./: README.md  pyproject.toml
cue.mod/: module.cue
docs/: architecture.md  coordinator.md  milestones.md
examples/: dds-lines.txt  expected-outcomes.jsonl  ingress.jsonl
examples/yazi/: keymap.toml
policy/: lease.cue  participants.cue  routing.cue
profiles/: dev.cue
runtime/: policy.dev.json
schema/: authority.cue  dds.cue  outcome.cue
src/ya_dual_pane/: __init__.py  bridge.py  bridge_cli.py  cli.py  coordinator.py  dds.py  layout.py  policy.py  transport.py  types.py
tests/: test_bridge.py  test_bridge_coordinator.py  test_coordinator.py  test_layout.py
