[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ya-dual-pane"
version = "0.1.0"
description = "Coordinator-first skeleton for a dual-pane Yazi workflow"
requires-python = ">=3.11"
authors = [
  { name = "OpenAI" }
]
dependencies = []

[project.scripts]
ya-bridge = "ya_dual_pane.bridge_cli:main"
ya-coord = "ya_dual_pane.cli:main"
ya-layout = "ya_dual_pane.layout:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
